Fix background color behind image

--- a/css/external.css
+++ b/css/external.css
@@ -15,7 +15,7 @@
 		background-attachment: fixed;
 		background-image: url(../img/notebook-background.jpg);
 		background-blend-mode: multiply;
-		background-color: #ccc;
+		background-color: #303030;
 		border-bottom-left-radius: 20% 10%;
 	}
 	.my-work {
